[gd_scene load_steps=4 format=3 uid="uid://eies0lnegrf6"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://resources/theme/wc3_theme.tres" id="1_70pqg"]
[ext_resource type="Script" path="res://src/ui/title_screen/configure_singleplayer_menu.gd" id="1_dgq16"]
[ext_resource type="PackedScene" uid="uid://dc67simk1xfp4" path="res://src/ui/title_screen/match_config_panel.tscn" id="2_7m6il"]
[ext_resource type="PackedScene" path="res://src/ui/title_screen/replay_file_selector.tscn" id="3_replay"]

[sub_resource type="ButtonGroup" id="ButtonGroup_12345"]

[node name="ConfigureSingleplayerMenu" type="PanelContainer" node_paths=PackedStringArray("_match_config_panel", "_new_game_button", "_load_replay_button", "_replay_file_selector")]
theme = ExtResource("1_70pqg")
theme_type_variation = &"MainPanelContainer"
script = ExtResource("1_dgq16")
_match_config_panel = NodePath("VBoxContainer/MatchConfigPanel")
_new_game_button = NodePath("VBoxContainer/HBoxContainer/NewGameButton")
_load_replay_button = NodePath("VBoxContainer/HBoxContainer/LoadReplayButton")
_replay_file_selector = NodePath("VBoxContainer/ReplayFileSelector")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "NEW_GAME_BUTTON"
toggle_mode = true
button_group = SubResource("ButtonGroup_12345")

[node name="LoadReplayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "LOAD_REPLAY_BUTTON"
toggle_mode = true
button_group = SubResource("ButtonGroup_12345")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "SINGLE_CHOOSE_GAME_SETTINGS"

[node name="MatchConfigPanel" parent="VBoxContainer" instance=ExtResource("2_7m6il")]
layout_mode = 2

[node name="ReplayFileSelector" parent="VBoxContainer" instance=ExtResource("3_replay")]
visible = false
layout_mode = 2

[node name="Spacer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "CANCEL_BUTTON"

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "START_BUTTON"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/NewGameButton" to="." method="_on_new_game_button_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/LoadReplayButton" to="." method="_on_load_replay_button_toggled"]
[connection signal="replay_selected" from="VBoxContainer/ReplayFileSelector" to="." method="_on_replay_file_selector_replay_selected"]
[connection signal="load_replay_pressed" from="." to="../TitleScreen" method="_on_configure_singleplayer_menu_load_replay_pressed"]
